radicale/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radicale
spec:
  type: LoadBalancer
  ports:
    - name: "5232"
      port: 5232
      targetPort: 5232
  selector:
    io.kompose.service: radicale
