radicale/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radicale
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-https-redirect@kubernetescrd
spec:
  tls:
  - hosts:
    - contacts.jutonz.com
    secretName: radicale-tls
  rules:
  - host: contacts.jutonz.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: radicale
            port:
              number: 5232
